--- a/index.html
+++ b/index.html
@@ -278,10 +278,30 @@
         
     </main>
 
+<!-- Footer Section -->
+<footer class="footer footer-center bg-black text-base-content rounded p-10">
 
-    <footer>
+  <div>
+    <a class="btn btn-ghost text-xl text-white"> <i class="fa-solid fa-arrow-right text-md -rotate-45 bg-[#ABEF5F] text-black rounded-full p-1"></i> Rinterio</a>
+  </div>
 
-    </footer>
+  <p class="text-[#737373]">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+
+
+  <nav class="grid grid-cols-1 gap-4 md:grid-flow-col">
+    <a class="text-[#E9E9E9] link link-hover">Home</a> 
+    <a class="text-[#E9E9E9] link link-hover">Services</a>
+    <a class="text-[#E9E9E9] link link-hover">Portfolio</a>
+    <a class="text-[#E9E9E9] link link-hover">Blogs </a>
+    <a class="text-[#E9E9E9] link link-hover">Contact Us</a>
+  </nav>
+
+  <div>
+    <button class="bg-[#ABEF5F] px-4 py-2 rounded-full text-black font-bold md:flex items-center">Book Consult <i class="fa-solid fa-arrow-right text-md -rotate-45 bg-black text-white rounded-full p-1 m-1"></i></button>
+  </div>
+
+
+</footer>
 
   </body>
 </html>
