Footer Part complete earlier now some comments added

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 
   <body class="font-manrope max-w-screen-xl mx-auto px-10 mb-20">
 
+    <!-- Header Part Here -->
+
     <header class="md:container mx-auto">
 
       <!-- navbar section -->
@@ -140,7 +142,7 @@
 
     </header>
 
-
+<!-- Main Part Here -->
     <main>
 
       <!-- About Us section -->
