Little bit of change done and try to finish the task

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
 
-  <body class="font-manrope max-w-screen-xl mx-auto px-10 mb-20">
+  <body class="font-manrope max-w-screen-xl mx-auto px-10 mb-15">
     <!-- Header Part Here -->
 
     <header class="md:container mx-auto">
@@ -476,7 +476,7 @@
 
     <!-- Footer Section -->
     <footer
-      class="footer footer-center bg-black text-base-content rounded p-10 mt-20"
+      class="footer footer-center bg-black text-base-content rounded p-10 mt-20 mb-10"
     >
       <div>
         <a class="btn btn-ghost text-xl text-white">
