Completed Extra part section

--- a/index.html
+++ b/index.html
@@ -472,6 +472,16 @@
           </button>
         </div>
       </section>
+
+      <!-- Extra part Section Countdown -->
+      
+      <section class="text-center mt-15 space-y-2">
+        <h1 class="text-6xl font-bold pt-10">Visited:</h1>
+        <span class="countdown font-mono text-6xl">
+          <span style="--value:${counter};"></span>
+        </span>
+      </section>
+
     </main>
 
     <!-- Footer Section -->
